# axle

./: CMakeLists-base.txt  CMakeLists.txt  README.md  ac.py  codem.py  pdf.py  reform.py  utils.py
include/axle/: cg.h  core.h  geom.h  ui.h
include/axle/cg/: camera.h  cg_fwd.h  cube_texture_gl.h  fps_counter.h  gl_object.h  glmesh.h  group.h  image.h  material-factory.h  material.h  object-factory.h  params.h  parser.h  program_glsl.h  render_buffer.h  scene.h  utils.h
include/axle/core/: container.hpp  debug.h  math.h  memory.h  parallel.h  random.h  settings.h  typedefs.h
include/axle/geom/: matrix4x4.h  normal.h
include/axle/img/: image.hpp  image_il.hpp  image_ip.hpp  pixel.hpp
include/axle/model/: triangle_mesh.h
include/axle/ui/: glut_window.h  pan.h  trackball.h
src/: CMakeLists.txt  cg.h  core.h  geom.h  ui.h
src/cg/: camera.cc  camera.h  cg_fwd.h  color.h  cube_image.cc  cube_image.h  cube_texture_gl.h  fps_counter.cc  fps_counter.h  framebuffer_object.cc  framebuffer_object.h  gl_buffer.cc  gl_buffer.h  gl_object.cc  gl_object.h  gl_utils.cc  glm_avl.cpp  glm_avl.h  glmaterial.cc  glmaterial.h  glmesh-loader.cc  glmesh.cc  glmesh.h  globject.h  glslmaterial.cc  glslmaterial.h  group.cc  group.h  image.cc  image.h  image_texture_gl.h  material-factory.cc  material-factory.h  material.cc  material.h  model_gl.cc  model_gl.h  object-factory.cc  object-factory.h  params.h  (+18 more)
src/core/: core.h  debug.cc  debug.h  error.cc.bk  io.cc  io.h  macros.h  math.cc  math.h  memory.cc  memory.h  options.cc  options.h  parallel.cc  parallel.h  random.cc  random.h  settings.h  timer.cc  timer.h  types.h  utils.cc  utils.h
src/geom/: aabb.cc  aabb.h  geom.cc  matrix4x4.cc  matrix4x4.h  normal.cc  normal.h  point.cc  point.h  vector3.cc  vector3.h
src/img/: image_il.hpp  image_ip.hpp  pixel.hpp
src/model/: mesh_creator.cc  obj_loader.cc  triangle_mesh.cc  triangle_mesh.h
src/ui/: glut_window.cc  glut_window.h  logic_window.cc  logic_window.h  pan.cc  pan.h  trackball.cc  trackball.h  ui_var.h  win32_window.cc  win32_window.h
